# agent_c_framework

./: .agent_c.meta.yaml  .agentcignore  .dockerignore  .gitignore  .local_workspaces.json  LICENSE  MODEST_CSS_IMPLEMENTATION.md  MY.local_workspaces.json  README.md  agent_c_tools.html  api.Dockerfile  compose_workspaces.json  conftest.py  desktop_packages.txt  example.env  foo.txt  local_workspaces.example.json  local_workspaces.json  macbook_packages.txt  package.json  pnpm-lock.yaml  pytest.ini  test_mcp_tool.py  test_path_validation.py  vehicles.json
src/ace_proto/: README.md  pyproject.toml  setup.py  ts_tool-0.1.0-py3-none-any.whl
src/ace_proto/src/ts_tool/: __init__.py  api.py
src/ace_proto/src/ts_tool/core/: __init__.py  code_explorer.py  parser_manager.py  query_builder.py
src/ace_proto/src/ts_tool/languages/: __init__.py  base.py  csharp.py  javascript.py  python.py  template.py
src/ace_proto/src/ts_tool/models/: __init__.py  code_entity.py  extraction_result.py
src/ace_proto/src/ts_tool/utils/: __init__.py  formatting.py  query_tester.py
src/agent_c_api_ui/agent_c_api/: .agent_c.meta.yaml  .coveragerc  .env.example  README.md  pyproject.toml  setup.py  users_cli.py
src/agent_c_api_ui/agent_c_api/.scratch/: api_redesign_findings.md  api_redesign_progress.md  chat_models_test_analysis.md  chat_models_test_migration_plan.md  config_endpoints_test_analysis.md  config_endpoints_test_migration_plan.md  config_models_test_analysis.md  config_models_test_migration_plan.md  config_services_test_analysis.md  config_services_test_fixes.md  config_services_test_migration_plan.md  dependency_pattern.md  file_models_test_analysis.md  file_models_test_migration_plan.md  history_models_id_fix_plan.md  history_models_test_analysis.md  history_models_test_migration_plan.md  test_migration_basic_analysis.md  test_migration_basic_structure.md  test_migration_detailed_plan.md  test_migration_plan.md  test_migration_session_tracker.md  v2_api_events_refactor_plan.md  v2_api_first_implementation_step.md  v2_api_implementation_plan.md  v2_api_implementation_step_1.1_plan.md  v2_api_implementation_step_1.2_plan.md  v2_api_implementation_step_1.3_plan.md  v2_api_implementation_step_3.1_plan.md  v2_api_implementation_step_3.2_plan.md  v2_api_implementation_step_4.1_completion.md  v2_api_implementation_step_4.1_plan.md  v2_api_implementation_step_4.2_completion.md  v2_api_implementation_step_4.2_plan.md  v2_api_implementation_step_4.3_completion.md  v2_api_implementation_step_4.3_plan.md  v2_api_implementation_step_4.4_completion.md  v2_api_implementation_step_4.4_plan.md  v2_api_implementation_step_4.5_completion.md  v2_api_implementation_step_4.5_plan.md  (+27 more)
src/agent_c_api_ui/agent_c_api/docs/: API_DOCUMENTATION.md  configuration_migration_guide.md  environment_configuration.md  realtime_api_implementation_guide.index.md  realtime_api_implementation_guide.md  redis_architecture.md  testing.md  v2_api_documentation.md
src/agent_c_api_ui/agent_c_api/docs/agent_context/: agent.md  agent_configuration.md  chat.md  events.md  files.md  index.md  interactions.md  models.md  personas.md  tools.md
src/agent_c_api_ui/agent_c_api/docs/api_v2/: agent.md  chat.md  config.md  debug.md  files.md  history.md  migration_guide.md  model_organization_guide.md  model_usage_patterns.md  models.md  session.md  session_agent_model_unification.md
src/agent_c_api_ui/agent_c_api/src/agent_c_api/: .env.example  main.py
src/agent_c_api_ui/agent_c_api/tests/: conftest.py  pytest.ini
src/agent_c_api_ui/agent_c_api/tools/: generate_model_graph.py
src/agent_c_core/: README.md  pyproject.toml  setup.py
src/agent_c_core/.scratch/: tool_chest_implementation_details.md  tool_chest_phase1_implementation_plan.md  tool_chest_redesign_notes.md  tool_chest_refactor_plan.md  tool_chest_test_plan.md  toolchest_redesign_code_transformation.md  toolchest_redesign_design_doc.md  toolchest_redesign_implementation_plan.md  toolchest_redesign_tracker.md
src/agent_c_core/docs/: chat_streaming_quick_reference.md  event_session_logger_api_design.md  event_session_logger_api_reference.md  realtime_api_client_events.md  realtime_api_heygen_integration.md  realtime_api_integration_guide.md  realtime_api_overview.md  realtime_api_runtime_events.md  session_logger_migration_guide.md  session_logger_refactor_report.html  structured_logging_processors.md  structured_logging_testing.md  transport_interface_documentation.md
src/agent_c_core/examples/: structured_logging_example.py
src/agent_c_core/src/agent_c/: __init__.py
src/agent_c_core/src/agent_c/agents/: __init__.py  (+4 more)
src/agent_c_core/tests/: test_mcp_server.py  test_mcp_tool_chest.py  test_persona_file.py  test_tool_chest.py
src/agent_c_core/tests/integration/: test_compatibility_integration.py  test_context_integration.py  test_structured_logging_integration.py  test_testing_infrastructure_integration.py
src/agent_c_reference_apps/: README.md  pyproject.toml  setup.py
src/agent_c_reference_apps/src/agent_c_reference_apps/: agent_c_cli.py  agent_c_gradio.py  example_file_import.py
src/agent_c_tools/: .agent_c.meta.yaml  README.md  README_mcp_server.md  agent_c_server_config.yaml  doc_explorer_design.md  doc_explorer_implementation.md  doc_explorer_project_structure.md  pyproject.toml  setup.py  test_config_management.py  test_report.html  test_report_fixed.html  test_websearch_registration.py
src/agent_c_tools/.scratch/: css_explorer_example.md  css_explorer_model_instructions.md  css_tool_reqquirements.md  redis_session_implementation_summary.md  refactored_claude.py  session_redis_implementation_plan.md  session_repository_design.md  test_styles.css
src/agent_c_tools/.scratch/mcp_math/: main.py  safe_eval.py
src/agent_c_tools/src/agent_c_tools/: __init__.py
src/agent_c_tools/tests/: test_workspace_planning_list_tasks.py
src/my_agent_c/: README.md  pyproject.toml  setup.py
src/my_agent_c/src/my_agent_c/: cli_agent_file_processor.py  my_agent_c_app.py
test/agent_c_tools/: pyproject.toml
test/agent_c_tools/tools/workspaces/: test_s3_storage.py
(+2251 files in other folders)
