[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "agent_c-core"
version = "0.1.3"
dependencies = [
    "pydantic==2.9.2",
    "openai==1.64.0",
    "tiktoken==0.7.0",
    "anthropic==0.47.1",
    "diskcache==5.6.3",
    "observable==1.0.3",
    "sounddevice",
    "numpy",
    "soundfile",
    "pyyaml"

]
requires-python = ">=3.10"
authors = [
  {name = "Donavan Stanley", email = "donavan.stanley@centricconsulting.com"},
  {name = "Joe Ours", email = "joesph.ours@centricconsulting.com"},
]
maintainers = [
  {name = "Donavan Stanley", email = "donavan.stanley@centricconsulting.com"},
]
description = "Core functionality for Agent C"
readme = "README.MD"
license = { text = "Business Source License 1.1" }
keywords = ["gpt", "claude", "agents", "ai", "centric"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/centricconsulting/agent_c_framework"


