[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "agent_c-core"
version = "0.1.3"
dependencies = [
    "pydantic>=2.9.2",
    "openai>=1.101.0",
    "tiktoken==0.11.0",
    "anthropic[bedrock]==0.54.0",
    "diskcache==5.6.3",
    "observable==1.0.3",
    "sounddevice>=0.5.2",
    "cffi<2.0.0",
    "numpy",
    "soundfile",
    "pyyaml",
    "mcp>=1.6.0",
    "structlog>=25.3.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0.43",
    "aiosqlite>=0.19.0",
    "email-validator"
]
requires-python = ">=3.10"
authors = [
  {name = "Donavan Stanley", email = "donavan.stanley@centricconsulting.com"},
  {name = "Joe Ours", email = "joesph.ours@centricconsulting.com"},
]
maintainers = [
  {name = "Donavan Stanley", email = "donavan.stanley@centricconsulting.com"},
]
description = "Core functionality for Agent C"
readme = "README.MD"
license = { text = "Business Source License 1.1" }
keywords = ["gpt", "claude", "agents", "ai", "centric"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/centricconsulting/agent_c_framework"

