[project]
name = "agent_c-reference-apps"
version = "0.1.3"
description = "Reference applications for written using Agent C"
dependencies = [
    "agent_c-core>=0.1.2",
    "agent_c-tools>=0.1.2",
    "gradio==5.15.0",
    "rich==13.8.1",
    "prompt_toolkit>=3.0.43",
    "python-dotenv",
    "spacy==3.8.3",
    "pyaudio",
    "openai-whisper",
    "fastapi==0.115.7",
    "uvicorn==0.34.0",
    "pydantic==2.9.2"
]

requires-python = ">=3.10"
authors = [
    { name = "Donavan Stanley", email = "donavan.stanley@centricconsulting.com" },
    { name = "Joe Ours", email = "joesph.ours@centricconsulting.com" },
]
maintainers = [
    { name = "Donavan Stanley", email = "donavan.stanley@centricconsulting.com" },
    { name = "Joe Ours", email = "joesph.ours@centricconsulting.com" },
]

readme = "README.MD"
license = { text = "Business Source License 1.1" }
keywords = ["gpt", "claude", "agents", "ai", "centric"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/centricconsulting/agent_c_framework"


[project.scripts]
agent_c-cli = "agent_c_reference_apps.agent_c_cli:main"
agent_c-web = "agent_c_reference_apps.agent_c_gradio:main"
agent_c-index = "agent_c_reference_apps.example_file_import:main"