[project]
name = "my_agent_c"
version = "0.1.1"
description = "Your personal playground for Agent C stuff"
dependencies = [
    "agent_c-core>=0.1.1",
    "agent_c-tools>=0.1.1"
]
requires-python = ">=3.10"
authors = [
  {name = "Your name here", email = "email@centricconsulting.com"},
]
maintainers = [
  {name = "Your name here", email = "email@centricconsulting.com"},
]

readme = "README.MD"
license = { text = "commercial" }
keywords = ["gpt", "claude", "agents", "ai", "centric"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/centricconsulting/agent_c"

[project.scripts]
my_agent_c = "my_agent_c.my_agent_c_app:main"
