[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_c-tools-tests"
version = "0.1.0"
description = "Unit Tests for agent_c_tools"
dependencies = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.3",
    "aiobotocore>=2.21.1"
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath="src"


