[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_c-api"
version = "0.1.0"
description = "FastAPI API Wrapper for Agent_C"
dependencies = [
    "agent_c-core>=0.1.2",
    "agent_c-tools>=0.1.2",
    "fastapi==0.115.7",
    "uvicorn==0.34.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "weaviate-client==4.8.1", # Also used by agent_c-rag
]

requires-python = ">=3.12"
authors = [
    { name = "Joe Ours", email = "joesph.ours@centricconsulting.com" },
]
maintainers = [
    { name = "Donavan Stanley", email = "donavan.stanley@centricconsulting.com" },
    { name = "Joe Ours", email = "joesph.ours@centricconsulting.com" },
]

readme = "README.MD"
license = { text = "Business Source License 1.1" }
keywords = ["gpt", "claude", "agents", "ai", "centric"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/centricconsulting/agent_c"


[project.scripts]
agent_c-api = "agent_c_api.main:run"